--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>José Matoso</title>
   
-    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/anima/css/style.css">
 	<link rel="stylesheet" href="assets/css/anima/css/reset.css">
     <link rel="stylesheet" href="assets/css/site.css">    
@@ -503,7 +503,7 @@
 
     <div class="bg-dark-1 px-4 py-5">
         <div class="row">
-            <div class="col-3">
+            <div class="col-md-3">
                 <div>
                     <h5 class="text-muted fw-bold text-uppercase">José Matoso</h5>
                     <div class="mt-3">
@@ -514,7 +514,7 @@
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-md-3">
                 <div>
                     <h5 class="text-muted fw-bold text-uppercase">Site Links</h5>
                     <div class="mt-3">
@@ -524,7 +524,7 @@
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-md-3">
                 <div>
                     <h5 class="text-muted fw-bold text-uppercase">Social</h5>
                     <div class="mt-3">
@@ -553,10 +553,22 @@
             </span>
         </div>
     </footer>
-</body>
+
 <script src="assets/js/jquery-3.6.0.min.js"></script>
-<script src="assets/js/bootstrap/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="assets/css/anima/js/main.js"></script>
 <script src="assets/css/anima/js/modernizr.js"></script>
 <script src="assets/js/site.js"></script>
+
+<!-- ConveyThis code -->
+<script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
+<script type="text/javascript">
+	document.addEventListener("DOMContentLoaded", function(e) {
+		ConveyThis_Initializer.init({
+			api_key: "pub_e556cc32509dc65d7f13689e43e1d59b"
+		});
+	});
+</script>
+<!-- End ConveyThis code -->
+</body>
 </html>
