--- a/index.html
+++ b/index.html
@@ -514,18 +514,7 @@
 
     <div class="bg-dark-1 px-4 py-5">
         <div class="row">
-            <div class="col-md-3 mb-2">
-                <div>
-                    <h5 class="text-muted fw-bold text-uppercase">José Matoso</h5>
-                    <div class="mt-3">
-                        <p class="my-1">1600 Amphitheatre Parkway</p>
-                        <p class="my-1">Mountain View, CA 94043 US</p>
-                        <p class="my-1">info@lhander.com   +123-456-789</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 mb-2">
+            <div class="col-4 mb-2">
                 <div>
                     <h5 class="text-muted fw-bold text-uppercase">Site Links</h5>
                     <div class="mt-3">
@@ -535,7 +524,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-2">
+            <div class="col-4 mb-2">
                 <div>
                     <h5 class="text-muted fw-bold text-uppercase">Social</h5>
                     <div class="mt-3">
@@ -547,7 +536,7 @@
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-4">
                 <div class="w-100 text-center">
                     <a href="https://jastec.co.ao">
                         <img src="assets/images/jt.png" alt="Jastec Logo" width="100" height="100">
