--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h6 class="display-3 fw-bold text-white">Hello, I am José Matoso</h6>
 
                 <section class="cd-intro mt-0">
-                    <h6 class="cd-headline display-6 rotate-1">
+                    <h6 class="cd-headline display-6 rotate-1 cd-words-wrapper">
                         <span class="display-5">What do I do?</small>
                         <span class="cd-words-wrapper text-white">
                             <b class="is-visible">Apps</b>
