--- a/index.html
+++ b/index.html
@@ -288,7 +288,11 @@
         <div class="p-5 less-padding text-center">
             <div class="row">
                 <div class="col-md-4">
-                    
+                    <div>
+                        <div class="rounded bg-white border">
+
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
 
@@ -512,7 +516,7 @@
         </div>
     </section>
 
-    <div class="bg-dark-1 px-4 py-5">
+    <div class="bg-dark-1 px-4 py-5 section-info">
         <div class="row">
             <div class="col-4 mb-2">
                 <div>
@@ -539,7 +543,7 @@
             <div class="col-4">
                 <div class="w-100 text-center">
                     <a href="https://jastec.co.ao">
-                        <img src="assets/images/jt.png" alt="Jastec Logo" width="100" height="100">
+                        <img src="assets/images/jt.webp" alt="Jastec Logo" width="100" height="100">
                     </a>
                 </div>
             </div>
@@ -555,12 +559,11 @@
     </footer>
 
 <script src="assets/js/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="assets/css/anima/js/main.js"></script>
 <script src="assets/css/anima/js/modernizr.js"></script>
 <script src="assets/js/site.js"></script>
-
-<!-- ConveyThis code -->
 <script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
 <script type="text/javascript">
 	document.addEventListener("DOMContentLoaded", function(e) {
@@ -569,6 +572,5 @@
 		});
 	});
 </script>
-<!-- End ConveyThis code -->
 </body>
 </html>
