--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="mt-5 p-5">
-                        <div style="margin-top: 10em;"></div>
+                        <div style="margin-top: 20%;"></div>
 
                         <section class="m-0">
                             <h6 class="dif fs-3 text-white">Hello, I am</h6>
@@ -228,7 +228,7 @@
             <div class="mt-5 pt-5"></div>
 
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="service-item">
                         <div>
                             <div class="services-icon">
@@ -245,7 +245,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="service-item">
                         <div>
                             <div class="services-icon">
@@ -262,7 +262,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="service-item">
                         <div>
                             <div class="services-icon">
@@ -613,53 +613,144 @@
         </div>
     </section>
 
-    <section id="experience" class="section-info"></section>
+    <section id="experience" class="section-info">
+        <div class="container">
+            <div class="text-center">
+                <h5 class="text-primary fw-bold text-uppercase mb-3">Experience</h5>
+                <h1 class="fs-2 text-dark">Work Experience</h1>
+    
+                <ul class="line">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
 
-    <section id="clients" class="px-4 py-5 section-info box-shadow bg-light">
-        <div class="text-center mb-5">
-            <h5 class="text-muted fw-bold text-uppercase">Clients</h5>
-            <h1 class="marri display-5 text-dark mt-2">My Clients</h1>
+            <div class="mt-5 pt-5"></div>
 
-            <h1>None</h1>
+            <div class="work-experience">
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="single-experience d-lg-flex align-items-center flex-wrap">
+                            <div class="experience-title order-last">
+                                <h3 class="text-dark fs-3 circular dif-2">CEO</h3>
+                                <p class="text-primary circular">Jastecnologias</p>
+                                <span class="date circular d-block dif-2">March 2017 - Current</span>
+                            </div>
+
+                            <div class="experience-number">
+                                <span>01</span>
+                            </div>
+
+                            <div class="experience-content order-first">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr sedia magnaliquya ratsed diam Lorem ipsum dolor sit amconsetetur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diam.Lorem ipsum dolor sit ametconsete tur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diamLorem ipsum dolor consetetur sadipscing elitr sed diam nonumy diam...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="single-experience d-lg-flex align-items-center flex-wrap wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.5s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.5s; animation-name: fadeIn;">
+                        <div class="experience-title text-right">
+                            <h3 class="text-dark fs-3 circular dif-2">Back-end Programmer</h3>
+                            <p class="text-primary circular">Intern at ACAP (Programming Academy)</p>
+                            <span class="date circular d-block dif-2">April 2020 - July 2020</span>
+                        </div>
+
+                        <div class="experience-number">
+                            <span>02</span>
+                        </div>
+
+                        <div class="experience-content">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr sedia magnaliquya ratsed diam Lorem ipsum dolor sit amconsetetur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diam.Lorem ipsum dolor sit ametconsete tur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diamLorem ipsum dolor consetetur sadipscing elitr sed diam nonumy diam...</p>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="single-experience d-lg-flex align-items-center flex-wrap wow fadeIn" data-wow-duration="1.3s" data-wow-delay="0.8s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.8s; animation-name: fadeIn;">
+                             <div class="experience-title order-last">
+                                <h3 class="text-dark fs-3 circular dif-2">Back-end Developer</h3>
+                                <p class="text-primary circular">Pro-IT Consulting</p>
+                                <span class="date circular d-block dif-2">August 2020 - Current</span>
+                            </div>
+
+                            <div class="experience-number">
+                                <span>03</span>
+                            </div>
+
+                            <div class="experience-content order-first">
+                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr sedia magnaliquya ratsed diam Lorem ipsum dolor sit amconsetetur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diam.Lorem ipsum dolor sit ametconsete tur sadipscing elitr sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat sed diamLorem ipsum dolor consetetur sadipscing elitr sed diam nonumy diam... </p>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <div class="bg-dark-1 px-4 py-5 section-info">
-        <div class="row">
-            <div class="col-4 mb-2">
-                <div>
-                    <h5 class="text-muted fw-bold text-uppercase">Site Links</h5>
-                    <div class="mt-3">
-                        <a href="#about" class="d-block text-white my-1">About Me</a>
-                        <a href="#blog" class="disabled d-block text-white my-1">Blog</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-4 mb-2">
-                <div>
-                    <h5 class="text-muted fw-bold text-uppercase">Social</h5>
-                    <div class="mt-3">
-                        <a class="d-block text-white my-1" href="https://www.linkedin.com/in/josematoso/" target="_blank">LinkedIn</a>
-                        <a class="d-block text-white my-1" href="mailto:jos3matosoj@gmail.com" target="_blank">Email</a>
-                        <a class="d-block text-white my-1" href="https://github.com/JMatoso" target="_blank">GitHub</a>
-                        <a class="d-block text-white my-1" href="https://wa.me/+244941566710?text=Hi, I'd like to solicite my pricing." target="_blank">WhatsApp</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-4">
-                <div class="w-100 text-center">
-                    <a href="https://jastec.co.ao">
-                        <img src="assets/images/jt.webp" alt="Jastec Logo" width="100" height="100">
-                    </a>
-                </div>
+    <section id="clients" class="section-info bg-light">
+        <div class="container section-padding">
+            <div class="">
+                <h5 class="text-primary fw-bold text-uppercase mb-3">Clients</h5>
+                <h1 class="fs-2 text-dark">A Few Clients of Mine</h1>
+    
+                <ul class="line">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section id="contact" class="section-info">
+        <div class="container text-center">
+            <div class="text-center">
+                <h5 class="text-primary fw-bold text-uppercase mb-3">Contact</h5>
+                <h1 class="fs-2 text-dark">Get In Touch</h1>
+
+                <ul class="line">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <div class="mt-4 pt-5"></div>
+
+            <div id="social-media">
+                <a class="social-link" href="https://www.linkedin.com/in/josematoso/" target="_blank">
+                    <span data-feather="linkedin"></span>
+                </a>
+
+                <a class="social-link" href="mailto:jos3matosoj@gmail.com" target="_blank">
+                    <span data-feather="mail"></span>
+                </a>
+
+                <a class="social-link" href="https://github.com/JMatoso" target="_blank">
+                    <span data-feather="github"></span>
+                </a>
+
+                <a class="social-link" href="https://wa.me/+244941566710?text=Hi, I'd like to solicite my pricing." target="_blank">
+                    <span data-feather="message-square"></span>
+                </a>
+            </div>
+
+            <div class="mt-5">
+                <h1 class="text-dark fs-1 circular">José Matoso</h1>
+            </div>
+
+            <div class="mb-5 pb-5"></div>
+        </div>
+    </section>
 
     <footer class="bg-dark px-4 py-4 box-shadow">
-        <div class="text-center">
+        <div class="text-center text-white-50">
             <span>
                 &copy;Copyright <span id="copy"></span>. All rights reserved by José Matoso.
             </span>
@@ -667,8 +758,8 @@
     </footer>
 
 <script src="assets/js/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-<!--script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"--></script>
+<script async="true" src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+<!--script async="true" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"--></script>
 <script src="assets/js/site.js"></script>
 <script src="assets/js/owlcarousel/owl.carousel.min.js"></script>
 <!--script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
