--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="I'am José Matoso and it's my professional portfolio. Need a website, API or an app, hire me!">  
+    <meta name="description" content="I'am José Matoso a fullstack developer and it's my professional portfolio. Need a website, API or an app, hire me!">  
 	<meta name="author" content="José Matoso">
 	<meta name="keywords" content="José Matoso, Personal Portfolio, CV, Curriculum Vitae, Angola, José, Matoso, Programmer, Angolan Programmer, Angolan, API, Sites, Apps, Developer">
     
