--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="I'am José Matoso a fullstack developer and it's my professional portfolio. Need a website, API or an app, hire me!">  
 	<meta name="author" content="José Matoso">
 	<meta name="keywords" content="José Matoso, Personal Portfolio, CV, Curriculum Vitae, Angola, José, Matoso, Programmer, Angolan Programmer, Angolan, API, Sites, Apps, Developer">
-    
+
     <meta name="theme-color" content="#14171c"/>
     <meta name="msapplication-navbutton-color" content="#14171c"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="#14171c"/>
@@ -404,7 +405,7 @@
                             <div class="px-5 pt-5 pb-1">
                                 <h3 class="fs-4 fw-normal text-dark circular">Dynamic Website</h3>
                                 <h6 class="plan-price text-primary mt-2 fs-5">
-                                    25.000,00
+                                    200.000,00
                                     <small class="pricing-currency">Kz</small>
                                 </h6>
                                 <h6 class="text-muted-2 mt-0">Get In Touch</h6>
