--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <h1><a class="navbar-brand" href="#top" style="font-size: large;">JM</a></h1>
+            <h1 class="mt-2"><a class="navbar-brand" href="#top" style="font-size: large;">JM</a></h1>
         
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-uppercase">
