Footer Social Media Links  Position Fixing

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/site.css">    
     <link rel="stylesheet" href="assets/css/media.css">    
     
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="favicon2.png">
 </head>
 
 <div id="loader">
@@ -302,7 +302,7 @@
             <div class="mt-5 pt-5"></div>
 
             <div>
-                <div class="owl-carousel owl-theme">
+                <div class="owl-carousel owl-theme owl-portfolio">
                     <div class="item">
                         <div>
                             <img class="owl-lazy project-image" data-src="assets/images/post-thumb-1.webp" alt="">
@@ -523,6 +523,49 @@
             </div>
 
             <div class="mt-5 pt-5"></div>
+
+            <div class="owl-carousel owl-theme owl-testimonials">
+                <div class="item">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img class="testimonials-image w-100" src="assets/images/avatars/author-2.jpg" alt="Elon Musk Picture">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="mt-2">
+                                <h1 class="fw-bold">Elon Musk</h1>
+                                <h6 class="text-muted">Founder, Tesla</h6>
+                            </div>
+                            <div class="mt-2">
+                                <p class="lead text-muted fs-6">
+                                    Lorem ipsum dolor sit aconsect dipisicing elit, 
+                                    sed do eiusmod to incididunt uabore etdolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img class="testimonials-image w-100" src="assets/images/avatars/author-1.jpg" alt="Elon Musk Picture">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="mt-2">
+                                <h1 class="fw-bold">Elon Musk</h1>
+                                <h6 class="text-muted">Founder, Tesla</h6>
+                            </div>
+
+                            <div class="mt-2">
+                                <p class="lead text-muted fs-6">
+                                    Lorem ipsum dolor sit aconsect dipisicing elit, 
+                                    sed do eiusmod to incididunt uabore etdolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -701,6 +744,18 @@
                     <li></li>
                     <li></li>
                 </ul>
+
+                <div class="mt-5 pt-5"></div>
+
+                <div class="owl-carousel owl-theme owl-clients">
+                    <div class="item">
+                        <div>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/jtc.png" alt="Jastec Client Logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -720,22 +775,30 @@
 
             <div class="mt-4 pt-5"></div>
 
-            <div id="social-media">
-                <a class="social-link" href="https://www.linkedin.com/in/josematoso/" target="_blank">
-                    <span data-feather="linkedin"></span>
-                </a>
+            <div id="social-media" class="row w-25" style="margin: 0 auto;">
+                <div class="col-3">
+                    <a class="social-link" href="https://www.linkedin.com/in/josematoso/" target="_blank">
+                        <span data-feather="linkedin"></span>
+                    </a>
+                </div>
 
-                <a class="social-link" href="mailto:jos3matosoj@gmail.com" target="_blank">
-                    <span data-feather="mail"></span>
-                </a>
+                <div class="col-3">
+                    <a class="social-link" href="mailto:jos3matosoj@gmail.com" target="_blank">
+                        <span data-feather="mail"></span>
+                    </a>
+                </div>
 
-                <a class="social-link" href="https://github.com/JMatoso" target="_blank">
-                    <span data-feather="github"></span>
-                </a>
+                <div class="col-3">
+                    <a class="social-link" href="https://github.com/JMatoso" target="_blank">
+                        <span data-feather="github"></span>
+                    </a>
+                </div>
 
-                <a class="social-link" href="https://wa.me/+244941566710?text=Hi, I'd like to solicite my pricing." target="_blank">
-                    <span data-feather="message-square"></span>
-                </a>
+                <div class="col-3">
+                    <a class="social-link" href="https://wa.me/+244941566710?text=Hi, I'd like to solicite my pricing." target="_blank">
+                        <span data-feather="message-square"></span>
+                    </a>
+                </div>
             </div>
 
             <div class="mt-5">
