--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <h1 class="mt-2"><a class="navbar-brand" href="#top" style="font-size: large;">JM</a></h1>
+            <h1 class="mt-2 fw-bold"><a class="navbar-brand" href="#top" style="font-size: large;">JM</a></h1>
         
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-uppercase">
@@ -74,9 +74,9 @@
     </nav>
 </header>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="0">
+<body>
     <section id="intro">
-        <div class="px-4 py-5">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="mt-5 p-5">
@@ -85,14 +85,14 @@
                         <section class="m-0">
                             <h6 class="dif fs-3 text-white wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">Hello, I am</h6>
                             <h1 class="dif fs-1 text-white fw-bold wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">José Matoso</h1>
-                            <h6 class="dif fs-6 text-muted wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Professional Fullstack Developer</h6>
+                            <h6 class="dif fs-6 fw-bold text-muted-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Professional Fullstack Developer</h6>
                             <h6 class="dif fs-6 circular text-white-50 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed 
                                 diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.
                             </h6>
                             <div class="mt-5">
                                 <button type="button" class="btn btn-lg btn-primary rounded btn-lg px-4 gap-3 mb-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.4s">Hire Me</button>
-                                <button class="btn btn-lg btn-outline-primary mb-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.4s">
+                                <button class="btn btn-lg border-light btn-outline-light mb-2 wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.4s">
                                     <span data-feather="download" class="fwt"></span>
                                     <span>Resume</span>
                                 </button>
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 wow slideInLeft" data-wow-duration="1.3s" data-wow-delay="0.2s">
-                    <div>
+                    <div class="mb-2">
                         Here enters an image
                     </div>
                 </div>
@@ -574,12 +574,12 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-sm-3">
                             <div class="text-right text-muted">
                                 <span data-feather="check-circle" class="fwt-big"></span>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-sm-9">
                             <div class="p-1">
                                 <h1 class="fs-1 fw-bold text-primary circular count">
                                     <span class="counter">30</span>
@@ -593,12 +593,12 @@
 
                 <div class="col-md-3">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="text-right text-muted">
                                 <span data-feather="smile" class="fwt-big"></span>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="p-1">
                                 <h1 class="fs-1 fw-bold text-primary circular count">
                                     <span class="counter">10</span>
@@ -612,12 +612,12 @@
 
                 <div class="col-md-3">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="text-right text-muted">
                                 <span data-feather="activity" class="fwt-big"></span>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="p-1">
                                 <h1 class="fs-1 fw-bold text-primary circular count">
                                     <span class="counter">5</span>
@@ -630,12 +630,12 @@
 
                 <div class="col-md-3">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="text-right text-muted">
                                 <span data-feather="check-circle" class="fwt-big"></span>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="p-1">
                                 <h1 class="fs-1 fw-bold text-primary circular count">
                                     <span class="counter">5</span>
