--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <div class="spinner"></div>
 </div>
 
+<div class="back-top">
+    <a href="#intro">
+        <span data-feather="arrow-up"></span>
+    </a>
+</div>
+
 <header class="main-header">
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark pt-5" aria-label="navbar">
         <div class="container">
