--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<meta name="author" content="José Matoso">
 	<meta name="keywords" content="José Matoso, Personal Portfolio, CV, Curriculum Vitae, Angola, José, Matoso, Programmer, Angolan Programmer, Angolan, API, Sites, Apps, Developer">
 
-    <meta name="theme-color" content="#14171c"/>
-    <meta name="msapplication-navbutton-color" content="#14171c"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="#14171c"/>
+    <meta name="theme-color" content="#0d6efd"/>
+    <meta name="msapplication-navbutton-color" content="#0d6efd"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0d6efd"/>
 
     <title>José Matoso</title>
   
@@ -21,6 +21,8 @@
 
     <link rel="stylesheet" href="assets/css/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owlcarousel/owl.theme.default.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/site.css">    
@@ -33,7 +35,7 @@
     <div class="spinner"></div>
 </div>
 
-<div class="back-top">
+<div class="back-top d-none">
     <a href="#intro">
         <span data-feather="arrow-up"></span>
     </a>
@@ -116,7 +118,7 @@
     </section>
     
     <section id="about" class="section-info">
-        <div class="container">
+        <div class="container section-padding">
             <div class="row">
                 <div class="col-md-6 wow slideInLeft" data-wow-duration="1.3s" data-wow-delay="0.2s">
                     <div class="mb-2">
@@ -516,7 +518,7 @@
     </section>
 
     <section id="testimonials" class="section-info">
-        <div class="container wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
+        <div class="container section-padding wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
             <div class="text-center">
                 <h5 class="text-primary fw-bold text-uppercase mb-3">Testimonials</h5>
                 <h1 class="fs-2 text-dark">What Clients Say</h1>
@@ -658,7 +660,7 @@
     </section>
 
     <section id="experience" class="section-info">
-        <div class="container">
+        <div class="container section-padding">
             <div class="text-center wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.1s">
                 <h5 class="text-primary fw-bold text-uppercase mb-3">Experience</h5>
                 <h1 class="fs-2 text-dark">Work Experience</h1>
@@ -767,7 +769,7 @@
     </section>
 
     <section id="contact" class="section-info">
-        <div class="container text-center wow slideInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
+        <div class="container section-padding text-center wow slideInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
             <div class="text-center">
                 <h5 class="text-primary fw-bold text-uppercase mb-3">Contact</h5>
                 <h1 class="fs-2 text-dark">Get In Touch</h1>
